--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -56,7 +56,7 @@ footer {
 /* media queries for footer only */
 
 /* for tablets and phones */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
 
     .footer-br {
         display: block;
