--- a/assets/css/manual.css
+++ b/assets/css/manual.css
@@ -45,7 +45,8 @@ p {
     #content-index {
         width: calc(100% - 20px);
         box-sizing: border-box;
-        margin: 0 20px;
+        margin-left: 10px;
+        margin-right: 10px;
         padding: 20px;
     }
 
